
dnl -*- m4 -*-
dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Id: configure.in,v 1.12 1999/11/05 05:50:21 jimg Exp $)
AC_INIT(MATArray.cc)
AC_CONFIG_HEADER(config_mat.h)
AC_CONFIG_AUX_DIR(../../etc)

dnl the variable `dir' is used as a basename for the directory tar file

DODS_GET_DODS_ROOT
DODS_DIRECTORY_VERSION

dnl the command to use to generate dependencies for makefiles

depend=${dods_root}/etc/depend.sh
AC_SUBST(depend)

dnl flags for the compilers and linkers - set these before locating the
dnl actual tools since some of the AC_PROG macros set these `flag variables'
dnl to default values otherwise.

AC_CANONICAL_HOST

CFLAGS="-gstabs -O2 $CFLAGS"
CXXFLAGS="-gstabs -O2 $CXXFLAGS"
dnl LDFLAGS="-gstabs $LDFLAGS"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_AWK
AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_PROG_INSTALL

DODS_PROG_LEX
DODS_PROG_GTAR
DODS_PROG_PERL
DODS_PROG_BISON
DODS_GCC

DODS_CHECK_GCC_DEBUG

dnl You should have g++, but you can override that with an environment
dnl variable. 

CXX=${CXX-g++}
AC_MSG_RESULT(Setting CXX to $CXX)
AC_SUBST(CXX)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

DODS_CHECK_SIZES

DODS_LIBS

DODS_OS

DODS_MATLAB

dnl Define `V4_COMPAT' to get the matlab 5 mat.h file to work with matlab 4
dnl c++ code. This has no effect with matlab 4.

AC_DEFINE(V4_COMPAT)

DODS_COMPRESSION_LIB
DODS_RX_LIB
DODS_WWW_LIB
dnl DODS_TCL_LIB
dnl DODS_TK_LIB

DODS_EFENCE

DODS_DBNEW

DODS_DEBUG_OPTION

AC_OUTPUT(Makefile nph-mat)
